# PyVersion

./: README.md  pyproject.toml  setup.py
PyVersion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Vmanager/: __init__.py
Vmanager.egg-info/: PKG-INFO  SOURCES.txt
pyv/: __init__.py  ver.py
pyv.egg-info/: PKG-INFO  SOURCES.txt
pyvr.egg-info/: PKG-INFO  SOURCES.txt
tests/: pyv_test.py
versionmanager/: __init__.py
versionmanager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
