[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "versionmanager"
version = "0.1"
authors = [
    {name = "Ammireza Zahraei", email = "amir.reza.zahraei@gmail.com"},
]
description = "A cross platform version management tool."
readme = "README.md"
requires-python = ">=3"
keywords = ["version","version management", "version comparison", "packaging", "latest version"]
license = {text = "MIT"}
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'Natural Language :: English',
        'Topic :: Software Development :: Build Tools',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.7',
]
